--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="current">ยอดค้างชำระ</string>
     <string name="title_have_space">มีช่องว่าง</string>
     <string name="message_have_space">กรุณากรอกทุกช่อง</string>
+    <string name="title_no_gender">ยังไม่ได้เลือกเพศ</string>
+    <string name="message_no_gender">กรุณาเลือกเพศด้วยค่ะ</string>
 
 
 </resources>
